se modifica color de fonodo de lp

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ button {
   text-align: center;
   font-size: 3em;
   margin: 1rem;
-  background-color: #6a9af3;
+  background-color: #6a9af3a8;
   color: white;
 }
 
