se corrige tamaño de imput y padding de botones para mejor vista

--- a/style.css
+++ b/style.css
@@ -61,9 +61,11 @@ button {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  width: 50%;
 }
 .display-backs > button {
   width: 30%;
+  padding: 0;
 }
 
 
