--- a/style.css
+++ b/style.css
@@ -75,6 +75,7 @@ button {
   width: 100%;
   height: 5vh;
   background-color: wheat;
+  font-size: 2.9rem;
 }
 
 #players-operador {
@@ -125,4 +126,30 @@ button {
   width: 100%;
   height: 4rem;
   font-size: 3rem;
+}
+
+/* letrero de derrota o perdida */
+
+.win-dinomorphia {
+  background-color: #0f0f7ed1;
+  position: absolute;
+  width: 100%;
+  height: 650px;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+}
+.win-dinomorphia > h3 {
+  margin: 20px;
+  color: white;
+}
+.win-dinomorphia > button {
+  width: fit-content;
+} 
+.inactive {
+  display: none;
 }
